Complete/incomplete now updates to firebase...
class toggling not working yet

--- a/public/style.css
+++ b/public/style.css
@@ -6,3 +6,15 @@
 .btn {
 	margin: 5px;
 }
+
+.table-hover tbody tr:hover {
+	background: rgba(46, 204, 113, .1);
+}
+
+.incomplete {
+	color: #e74c3c;
+}
+
+.done {
+	color: #2ecc71;
+}
